swagger routes updated
